# concurrex

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  tox.ini
.github/workflows/: ci.yml
benchmarks/: bench_numarray.py  bench_thread.py
concurrex/: __init__.py  _thread.py  _thread_concurrent.py  _thread_exe.py  _thread_pool.py  thread.py  thread_utils.py  utils.py
examples/: 1.py
tests/: conftest.py  test_threads.py  test_utils.py
